add syslog input to fluent bit

--- a/td-agent-bit-template.conf
+++ b/td-agent-bit-template.conf
@@ -2,6 +2,12 @@
 	# Reduce the flush interval for better real-time access
 	Flush  2
 
+[INPUT]
+	Name         syslog
+	Path         /tmp/in_syslog
+	Chunk_Size   32
+	Buffer_Size  64
+
 [OUTPUT]
 	Name    http
 	# Will match all inputs, replace with your match if you want to send a subset
